* fix : 업로드 실패 건 파일 작성 로직 수정